--- a/app.json
+++ b/app.json
@@ -16,9 +16,22 @@
       "output": "single",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router", "expo-font", "expo-web-browser"],
+    "plugins": [
+      "expo-router",
+      "expo-font",
+      "expo-web-browser"
+    ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "2c65a577-710d-41af-8d59-78264aa3bda9"
+      }
+    },
+    "android": {
+      "package": "com.daanielmedeiros.ginsengapp"
     }
   }
 }
