--- a/app.json
+++ b/app.json
@@ -3,18 +3,31 @@
     "name": "Grupo Ginseng",
     "slug": "ginseng-app",
     "version": "1.0.0",
+    "platforms": ["ios", "android", "web"],
     "orientation": "portrait",
     "icon": "./assets/images/icon-logo.png",
     "scheme": "com.grupoginseng.app",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "primaryColor": "#04506B",
     "splash": {
       "image": "./assets/images/icon-logo.png",
       "resizeMode": "contain",
       "backgroundColor": "#04506B"
     },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.grupoginseng.app"
+    },
+    "android": {
+      "package": "com.grupoginseng.app",
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/images/icon-logo.png",
+        "backgroundColor": "#04506B"
+      }
     },
     "web": {
       "bundler": "metro",
@@ -34,9 +47,6 @@
       "eas": {
         "projectId": "2c65a577-710d-41af-8d59-78264aa3bda9"
       }
-    },
-    "android": {
-      "package": "com.daanielmedeiros.ginsengapp"
     }
   }
 }
